--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
       <div class="title-wrap">
         <div class="title-cat">
           <div class=title-left>
-            <p>2019/01/01<br>
-            ニュースタイトルが入ります。３月の決算報告書
-            </p>
+            <p class=first-line>2019/01/01</p>
+            <p class="second-line">&emsp;ニュースタイトルが入ります。３月の決算報告書</p>
           </div>
           <div class="title-right">
             <p>news</p>
