--- a/index.html
+++ b/index.html
@@ -38,6 +38,59 @@
         </div>
       </div>
     </div>
+
+    <div id="mission">
+      <img src="img/mission-img.jpg" alt="">
+      <div class="mission-wrap">
+        <p class="first-line">お客様のために進化する成長企業であり続ける</p>
+        <p class="second-line">
+        顧客主導型サービスを提供する企業として、お客様の会社経営に必要なサービスと情報を提供し続ける企業支援会社を目指します。企業が現在直面している「勝ち残るため」の戦略を提供できる会社として、ホームページをはじめ、各種マーケティングをご提供いたします。
+        </p>
+        <button>ミッション詳細</button>
+      </div>
+    </div>
+    <div class="blank"></div>
+
+    <div id="service">
+      <h2 class="section-title">service</h2>
+      <div class="service-wrap">
+        <img class="img-first" src="img/service2.jpg" alt="">
+        <img class="img-second" src="img/service1.jpg" alt="">
+        <div class="service-cat">
+          <h3>Web制作事業</h3>
+          <p class="first-line">コーチングのミッション</p>
+          <p class="second-line">
+            ユーザーが求める物を分析し、ユーザビリティを備えた最適なサイトを提供。建設業から美容、ブライダル、飲食店まで多種多様な業種の制作実績があります
+          </p>
+          <button>サービス詳細</button>
+        </div>
+        <div class="service-cat2">
+          <h3>Web制作事業</h3>
+          <p class="first-line">コーチングのミッション</p>
+          <p class="second-line">
+            ユーザーが求める物を分析し、ユーザビリティを備えた最適なサイトを提供。建設業から美容、ブライダル、飲食店まで多種多様な業種の制作実績があります
+          </p>
+          <button>サービス詳細</button>
+        </div>
+      </div>
+    </div>
+    <div id="about">
+      <div class="about-left">
+        <h2>company</h2>
+        <p>会社概要</p>
+        <img class="company" src="img/company.jpeg" alt="">
+      </div>
+      <div class="about-right">
+        <h2>recruit</h2>
+        <p>採用情報</p>
+        <img class="recruit" src="img/recruit.jpg" alt="">
+      </div>
+      <div class="FAQ">
+        <h2>FAQ</h2>
+        <p>良くある質問</p>
+      </div>
+    </div>
+
   </main>
 
   <footer class="footer">
