--- a/index.html
+++ b/index.html
@@ -78,16 +78,26 @@
       <div class="about-left">
         <h2>company</h2>
         <p>会社概要</p>
-        <img class="company" src="img/company.jpeg" alt="">
       </div>
       <div class="about-right">
         <h2>recruit</h2>
         <p>採用情報</p>
-        <img class="recruit" src="img/recruit.jpg" alt="">
       </div>
       <div class="FAQ">
         <h2>FAQ</h2>
         <p>良くある質問</p>
+      </div>
+    </div>
+
+    <div id="contact">
+      <div class="contact-wrap">
+        <h2>contact</h2>
+        <p>お問い合わせ</p>
+        <p>お気軽にお問い合せください。</p>
+        <p>
+          資料請求・お問い合わせなどなんでも気軽にお問い合わせください。お仕事のご連絡もお問い合わせページに飛んでいただいて、入力フォームにご記入お願いいたします。
+        </p>
+        <button>お問い合わせへ</button>
       </div>
     </div>
 
