--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
     <div id="contact">
       <div class="contact-wrap">
         <h2>contact</h2>
-        <p>お問い合わせ</p>
-        <p>お気軽にお問い合せください。</p>
-        <p>
+        <p class="line1">お問い合わせ</p>
+        <p class="line2">お気軽にお問い合せください。</p>
+        <p class="line3">
           資料請求・お問い合わせなどなんでも気軽にお問い合わせください。お仕事のご連絡もお問い合わせページに飛んでいただいて、入力フォームにご記入お願いいたします。
         </p>
         <button>お問い合わせへ</button>
@@ -117,7 +117,9 @@
         </ul>
       </nav>
     </div>
-    <small class="copyright">Copyright 2019 estra inc. All Rights Reserved.</small>
+    <small class="copyright">
+      Copyright 2019 estra inc. All Rights Reserved.
+    </small>
   </footer>
   
 </body>
